[gd_scene load_steps=6 format=3 uid="uid://b4tw7gxca4bhj"]

[ext_resource type="Script" uid="uid://bi3igoqkn148k" path="res://scenes/win_screen/win_screen.gd" id="1_xamm4"]
[ext_resource type="Texture2D" uid="uid://c65soght4j8py" path="res://art/tile_0087.png" id="3_fhbw0"]

[sub_resource type="Gradient" id="Gradient_d3fc5"]
colors = PackedColorArray(0.0925943, 0.108696, 0.555451, 1, 0.225601, 0.34753, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3olvj"]
gradient = SubResource("Gradient_d3fc5")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_37jyt"]
font_size = 32
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.341176)

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xamm4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_3olvj")

[node name="CharacterPotrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 37.0
offset_right = 31.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fhbw0")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -45.0
offset_right = 124.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Thank you for playing the demo"
label_settings = SubResource("LabelSettings_37jyt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 15)
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
